freshman first commit

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Document</title>
   </head>
 
-  <body>
+  <body>ct
     <nav>leader is in charge</nav>
-    <main></main>
+    <main>
+      this is ffresh man in charge
+      hello
+      i am making my first proje
+    </main>
     <footer></footer>
   </body>
 </html>
