--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   </head>
 
   <body>
-    <nav>leader is in charge</nav>
+    <nav>
+        leader is in charge
+        haha
+        hoho
+        yeah
+        bts
+    </nav>
     <main></main>
     <footer></footer>
   </body>
