--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <main>
       this is ffresh man in charge
       hello
-      i am making my first proje
+      i am making my first project
+      hi
+      aloha
+      tarara
+      tantanta
+      dididodo
     </main>
     <footer></footer>
   </body>
